refactor to modules

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id="game" height="300" width="400">canvas not working</canvas>
-    <script lang="text/javascript" src = game.js></script>
+
+    <script lang="text/javascript" type="module" src = Game.js></script>
 </body>
 </html>
