--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <canvas id="game" height="300" width="400">canvas not working</canvas>
-
-    <script lang="text/javascript" type="module" src = Game.js></script>
+    <script lang="text/javascript" type="module" src = game.js></script>
 </body>
 </html>
